# BDD

./: .gitignore  README.md  backup.sqlite  pyproject.toml
db/: build.py
db/scrapper_script/: async_fetch.py  athlete_data.py  record_script.py  result.py
db/sql_script/: groupe_NPC.sql  sport_categories.sql  static.sql
website/: connect.js  helper.js  server.py
website/accueil/: index.html  style.css
website/calendrier/: index.html  index.js  style.css
website/header/: header.css  header.js
website/lieu/: index.css  index.html  index.js
website/participants/: index.html  index.js  style.css
website/resultat/: index.html  index.js  style.css
